Added history feature

--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <a href="style.css"></a>
 </head>
 
 <body>
-<h1>Guess the Number!</h1>
-<p>Guess a number between 1 and 100.</p>
-<input type="number" id="number">
-<button id="submit">Submit</button>
-<h2 id="response"></h2>
+    <div>
+        <h1>Guess the Number!</h1>
+        <p>Guess a number between 1 and 100.</p>
+        <input type="number" id="number" >
+        <button id="submit">Submit</button>
+        <h2 id="response"></h2>
+        <ul id="history">
+        </ul>
+    </div>
 <script src="app.js"></script>
 </body>
 
